# sssss1

./: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: __init__.py  auth.py  config.py  main.py  models.py  storage.py
backend/app/agent/: executor.py  memory.py  planner.py  verifier.py
backend/app/rag/: chunking.py  crawler.py  retriever.py
backend/app/services/: fallback_docs.py  llm.py  mutator.py  reporter.py  scenario_generator.py
backend/tests/: test_chunking.py  test_scenarios.py  test_verifier.py
deploy/: backend.Dockerfile  docker-compose.yml  frontend.Dockerfile  nginx.conf
docs/: ARCHITECTURE.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: FeatureList.tsx  RunTimeline.tsx  ScenarioList.tsx  StatCard.tsx
frontend/src/styles/: main.css
scripts/: dev.py  setup_4gaboards.py  smoke.py
