[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xdrj-4gaboards-agent"
version = "0.1.0"
description = "RAG-based test scenario generation and autonomous web testing for 4ga Boards."
requires-python = ">=3.10"
dependencies = [
  "bcrypt>=4.0",
  "beautifulsoup4>=4.12",
  "chromadb>=0.5",
  "fastapi>=0.110",
  "httpx>=0.27",
  "jinja2>=3.1",
  "numpy>=1.26",
  "openai>=1.40",
  "python-jose[cryptography]>=3.3",
  "playwright>=1.45",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "python-dotenv>=1.0",
  "requests>=2.32",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["backend"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

